--- a/data/sources/topmonks-caffe.yaml
+++ b/data/sources/topmonks-caffe.yaml
@@ -45039,3 +45039,27 @@ series:
         url: https://www.meetup.com/topmonks-caffe/events/289307995/
         dtstart: 2022-11-01 19:00:00+01:00
         dtend: 2022-11-01 21:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Povídání o Vietnamu
+        description: 'TopMonks Caffè
+
+          Tuesday, November 1 at 7:00 PM
+
+
+          Vietnam jak ho (ne)znéte. **Luu Ly** nám povypráví o práci, cestování a správné kultuře pití. Všechno, co jste chtěli vědět o Vietnamu, se dozvíte z p...
+
+
+          https://www.meetup.com/topmonks-caffe/events/289307995/'
+        location: Loft N8 Restaurant and Shisha Lounge (Nekázanka 883/8, Nové Město, Praha-Praha 1, Czech Republic 110 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289307995@meetup.com
+        url: https://www.meetup.com/topmonks-caffe/events/289307995/
+        dtstart: 2022-11-01 19:00:00+01:00
+        dtend: 2022-11-01 21:00:00+01:00
