--- a/data/sources/mlmu-brno.yaml
+++ b/data/sources/mlmu-brno.yaml
@@ -43965,3 +43965,53 @@ series:
         url: https://www.meetup.com/machine-learning-meetup-brno/events/285343994/
         dtstart: 2022-04-19 16:00:00+02:00
         dtend: 2022-04-19 18:00:00+02:00
+  - meetupcom:
+      meta_description: 'Abstract:
+
+        The sciences of Genomics and Proteomics hold the keys of much of the biotechnological and medical advances in our future. From vaccines against lethal pandemics t'
+      og_title: Advances in Deep Learning in Genomics and Proteomics, Tue, Dec 13, 2022, 6:30 PM   | Meetup
+      url: https://www.meetup.com/machine-learning-meetup-brno/events/290006927/
+      ical:
+        summary: Advances in Deep Learning in Genomics and Proteomics
+        description: 'Machine Learning Meetup Brno
+
+          Tuesday, December 13 at 6:30 PM
+
+
+          Abstract:The sciences of Genomics and Proteomics hold the keys of much of the biotechnological and medical advances in our future. From vaccines again...
+
+
+          https://www.meetup.com/machine-learning-meetup-brno/events/290006927/'
+        location: Impact Hub Brno (Cyrilská 7, Brno-střed-Trnitá, Czech Republic 602 00)
+        geo:
+          lat: 49.2
+          lon: 16.61
+        status: CONFIRMED
+        uid: event_290006927@meetup.com
+        url: https://www.meetup.com/machine-learning-meetup-brno/events/290006927/
+        dtstart: 2022-12-13 18:30:00+01:00
+        dtend: 2022-12-13 21:30:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Computer Vision in Manufacturing Industry
+        description: 'Machine Learning Meetup Brno
+
+          Monday, November 14 at 5:30 PM
+
+
+          Abstract:Automation is a hot manufacturing topic in recent years with ML technology being its key enabler. However, unlike popular and widespread ML a...
+
+
+          https://www.meetup.com/machine-learning-meetup-brno/events/289520074/'
+        location: Impact Hub Brno (Cyrilská 7, Brno-střed-Trnitá, Czech Republic 602 00)
+        geo:
+          lat: 49.2
+          lon: 16.61
+        status: CONFIRMED
+        uid: event_289520074@meetup.com
+        url: https://www.meetup.com/machine-learning-meetup-brno/events/289520074/
+        dtstart: 2022-11-14 17:30:00+01:00
+        dtend: 2022-11-14 20:30:00+01:00
