--- a/data/sources/pydata-prague.yaml
+++ b/data/sources/pydata-prague.yaml
@@ -27121,3 +27121,52 @@ series:
         url: https://www.meetup.com/pydata-prague/events/288395992/
         dtstart: 2022-10-18 18:00:00+02:00
         dtend: 2022-10-18 21:00:00+02:00
+  - meetupcom:
+      meta_description: 'Hello Python vivisectors & data manipulators!
+
+        The 13th Prague PyData meetup will take place at **new Deepnote offices**. As usual, the talks will start at 18:30 but we enco'
+      og_title: 'PyData Prague #13 - In Good We Rust, Tue, Dec 13, 2022, 6:00 PM   | Meetup'
+      url: https://www.meetup.com/pydata-prague/events/290041316/
+      ical:
+        summary: 'PyData Prague #13 - In Good We Rust'
+        description: 'PyData Prague
+
+          Tuesday, December 13 at 6:00 PM
+
+
+          Hello Python vivisectors & data manipulators!The 13th Prague PyData meetup will take place at **new Deepnote offices**. As usual, the talks will start...
+
+
+          https://www.meetup.com/pydata-prague/events/290041316/'
+        location: Deepnote (28. Října 377, Staré Město, Praha-Praha 1, Czech Republic 110 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290041316@meetup.com
+        url: https://www.meetup.com/pydata-prague/events/290041316/
+        dtstart: 2022-12-13 18:00:00+01:00
+        dtend: 2022-12-13 21:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'PyData Prague #12 - Minutes to a Degree'
+        description: 'PyData Prague
+
+          Tuesday, October 18 at 6:00 PM
+
+
+          Hello Python & Data maniacs!The 12th Prague PyData meetup will take place at **new (https://goo.gl/maps/nvaV2vDJh8MneKg5A) offices**. As usual, the ta...\n
+
+          https://www.meetup.com/pydata-prague/events/288395992/'
+        location: LMC Ltd. (Menclova 2538/2, Praha 8-Libeň, Czech Republic 170 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288395992@meetup.com
+        url: https://www.meetup.com/pydata-prague/events/288395992/
+        dtstart: 2022-10-18 18:00:00+02:00
+        dtend: 2022-10-18 21:00:00+02:00
