--- a/data/sources/prague-golang.yaml
+++ b/data/sources/prague-golang.yaml
@@ -38646,12 +38646,9 @@ series:
         dtstart: 2021-03-24 18:00:00+01:00
         dtend: 2021-03-24 19:00:00+01:00
   - meetupcom:
-      meta_description: 'Hosted by SentinelOne
-
-
-        Please note at the SentinelOne office, all meetup attendees will be required to sign a generic NDA used for all office visitors to be able to attend '
-      og_title: 'Go Meetup #9, Wed, Nov 30, 2022, 6:00 PM   | Meetup'
-      url: https://www.meetup.com/prague-golang-meetup/events/289247920/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'Go Meetup #9'
         description: 'Prague Golang Meetup
@@ -40784,6 +40781,78 @@ series:
         url: https://www.meetup.com/prague-golang-meetup/events/286541748/
         dtstart: 2022-06-28 18:00:00+02:00
         dtend: 2022-06-28 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Go meetup #8'
+        description: 'Prague Golang Meetup
+
+          Tuesday, June 28 at 6:00 PM
+
+
+          Join us for our in-person and online meetup at Productboard HQ! We’re excited to host **Go Meetup** **8**!**🚨 Please (https://www.eventbrite.com/e/go-...
+
+
+          https://www.meetup.com/prague-golang-meetup/events/286541748/'
+        location: Productboard s.r.o. (Boudníkova 3, Praha 8-Palmovka, Czech Republic 180 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286541748@meetup.com
+        url: https://www.meetup.com/prague-golang-meetup/events/286541748/
+        dtstart: 2022-06-28 18:00:00+02:00
+        dtend: 2022-06-28 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Go Meetup in Prague #7'
+        description: 'Prague Golang Meetup
+
+          Tuesday, May 31 at 6:00 PM
+
+
+          Join us for our in-person and online meetup at Productboard HQ! We’re excited to host **our first Golang Meetup** **of 2022**! **🚨 Please (https://www...
+
+
+          https://www.meetup.com/prague-golang-meetup/events/285491798/'
+        location: Productboard s.r.o. (Boudníkova 3, Praha 8-Palmovka, Czech Republic 180 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285491798@meetup.com
+        url: https://www.meetup.com/prague-golang-meetup/events/285491798/
+        dtstart: 2022-05-31 18:00:00+02:00
+        dtend: 2022-05-31 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Golang Prague #6 with Jon Calhoun - Learning Go'
+        description: 'Prague Golang Meetup
+
+          Wednesday, June 23 at 6:00 PM
+
+
+          In the Golang Prague Meetup #6 we will focus on the process of learning Go and programming languages in general. We are joined by a fantastic guest Jo...
+
+
+          https://www.meetup.com/prague-golang-meetup/events/278200916/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_278200916@meetup.com
+        url: https://www.meetup.com/prague-golang-meetup/events/278200916/
+        dtstart: 2021-06-23 18:00:00+02:00
+        dtend: 2021-06-23 20:00:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
