--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -15098,13 +15098,13 @@ series:
       meta_description: '**Talk Synopsis:**
 
         A key idea that TypeDB brings to the database landscape is typing. With this, the philosophy behind adding stronger typing systems to programming languag'
-      og_title: Types in TypeDB, Thu, Dec 1, 2022, 6:30 PM   | Meetup
+      og_title: Types in TypeDB, Tue, Jan 10, 2023, 6:30 PM   | Meetup
       url: https://www.meetup.com/typedb-prague/events/289350927/
       ical:
         summary: Types in TypeDB
         description: 'TypeDB Prague Engineers
 
-          Thursday, December 1 at 6:30 PM
+          Tuesday, January 10 at 6:30 PM
 
 
           **Talk Synopsis:**A key idea that TypeDB brings to the database landscape is typing. With this, the philosophy behind adding stronger typing systems t...
@@ -15118,8 +15118,8 @@ series:
         status: CONFIRMED
         uid: event_289350927@meetup.com
         url: https://www.meetup.com/typedb-prague/events/289350927/
-        dtstart: 2022-12-01 18:30:00+01:00
-        dtend: 2022-12-01 19:30:00+01:00
+        dtstart: 2023-01-10 18:30:00+01:00
+        dtend: 2023-01-10 19:30:00+01:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
@@ -17458,6 +17458,30 @@ series:
         url: https://www.meetup.com/typedb-prague/events/289308229/
         dtstart: 2022-11-23 18:30:00+01:00
         dtend: 2022-11-23 19:30:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Comparing Semantic Web Technologies to TypeDB
+        description: 'TypeDB Prague Engineers
+
+          Tuesday, November 29 at 6:30 PM
+
+
+          **Talk Synopsis**Semantic Web technologies enable us to represent and query for very complex and heterogeneous datasets. We can add semantics and reas...
+
+
+          https://www.meetup.com/typedb-prague/events/289308145/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289308145@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/289308145/
+        dtstart: 2022-11-29 18:30:00+01:00
+        dtend: 2022-11-29 19:30:00+01:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
