--- a/data/sources/msd-it.yaml
+++ b/data/sources/msd-it.yaml
@@ -32456,3 +32456,27 @@ series:
         url: https://www.meetup.com/msd-it-meet-ups/events/289474497/
         dtstart: 2022-11-23 16:00:00+01:00
         dtend: 2022-11-23 18:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Dark Side of Data Science - STUDENTS ONLY
+        description: 'MSD IT Meet Ups
+
+          Wednesday, November 23 at 4:00 PM
+
+
+          **Dark Side of Data Science – review of selected examples from famous book Weapons of Math Destruction.** Algorithms, data science, machine learning a...
+
+
+          https://www.meetup.com/msd-it-meet-ups/events/289474497/'
+        location: MSD building FIVE (Na Valentince 504, Praha 5-Smíchov, Czech Republic 150 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289474497@meetup.com
+        url: https://www.meetup.com/msd-it-meet-ups/events/289474497/
+        dtstart: 2022-11-23 16:00:00+01:00
+        dtend: 2022-11-23 18:00:00+01:00
