--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -17933,3 +17933,27 @@ series:
         url: https://www.meetup.com/typedb-prague/events/289688135/
         dtstart: 2022-12-06 18:30:00+01:00
         dtend: 2022-12-06 19:30:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Beyond SQL | Comparing SQL to TypeQL
+        description: 'TypeDB Prague Engineers
+
+          Tuesday, December 6 at 6:30 PM
+
+
+          ## Details **Talk Synopsis**Using SQL to query relational databases is easy. As a declarative language, it’s straightforward to write queries and buil...
+
+
+          https://www.meetup.com/typedb-prague/events/289688135/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289688135@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/289688135/
+        dtstart: 2022-12-06 18:30:00+01:00
+        dtend: 2022-12-06 19:30:00+01:00
