data: cron update

--- a/data/sources/ruby-praha.yaml
+++ b/data/sources/ruby-praha.yaml
@@ -8330,9 +8330,9 @@ series:
         dtstart: 2022-07-06 19:00:00+02:00
         dtend: 2022-07-06 22:00:00+02:00
   - meetupcom:
-      meta_description: Find Meetup events so you can do more of what matters to you. Or create your own group and meet people near you who share your interests.
-      og_title: First Wednesday Of The Month - Ruby, Wed, Dec 7, 2022, 7:00 PM   | Meetup
-      url: https://www.meetup.com/praguerb/events/dkmktfydcqbkb/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: First Wednesday Of The Month - Ruby
         description: 'Prague.rb / CSRUG
@@ -13054,3 +13054,24 @@ series:
         url: https://www.meetup.com/praguerb/events/289094129/
         dtstart: 2022-11-02 19:00:00+01:00
         dtend: 2022-11-02 22:00:00+01:00
+  - meetupcom:
+      meta_description: Find Meetup events so you can do more of what matters to you. Or create your own group and meet people near you who share your interests.
+      og_title: First Wednesday Of The Month - Ruby, Wed, Apr 5, 2023, 7:00 PM   | Meetup
+      url: https://www.meetup.com/praguerb/events/dkmktfyfcgbhb/
+      ical:
+        summary: First Wednesday Of The Month - Ruby
+        description: 'Prague.rb / CSRUG
+
+          Wednesday, April 5 at 7:00 PM
+
+
+          https://www.meetup.com/praguerb/events/dkmktfyfcgbhb/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_dkmktfyfcgbhb@meetup.com
+        url: https://www.meetup.com/praguerb/events/dkmktfyfcgbhb/
+        dtstart: 2023-04-05 19:00:00+02:00
+        dtend: 2023-04-05 22:00:00+02:00
