--- a/data/sources/pyvo-praha.yaml
+++ b/data/sources/pyvo-praha.yaml
@@ -9737,21 +9737,21 @@ series:
         dtstart: 2022-07-20 19:00:00+02:00
         dtend: 2022-07-20 23:59:00+02:00
   - meetupcom:
-      meta_description: We will meet for an informal chat about Python, programming, and more. Details will be added.
-      og_title: 'Pyvo Prague #, Wed, Dec 21, 2022, 7:00 PM   | Meetup'
+      meta_description: Hou hou hou Vánoční Pyvo je tu! 🎄 Také máte doma šuplík plný HW pokladů, udělátek, hejblátek, tlačítek, tišťáků, robotů, her, konzolí, Arduin a jiného zábavného balastu? R
+      og_title: 'Pyvo Prague #139 - Christmas Hardware Edition, Wed, Dec 21, 2022, 7:00 PM   | Meetup'
       url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcqbcc/
       ical:
-        summary: 'Pyvo Prague #'
+        summary: 'Pyvo Prague #139 - Christmas Hardware Edition'
         description: 'Pyvo: Prague Python Meetup
 
           Wednesday, December 21 at 7:00 PM
 
 
-          We will meet for an informal chat about Python, programming, and more. Details will be added.
+          Hou hou hou Vánoční Pyvo je tu! 🎄 Také máte doma šuplík plný HW pokladů, udělátek, hejblátek, tlačítek, tišťáků, robotů, her, konzolí, Arduin a jiného...
 
 
           https://www.meetup.com/pyvo-prague-python-meetup/events/289798942/'
-        location: Prague (, Prague, Czech Republic)
+        location: Na Venecku (Ostrovskeho 38a, Prague, Czech Republic)
         geo:
           lat: 50.08
           lon: 14.43
@@ -13305,6 +13305,30 @@ series:
         url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssyfcfbtb/
         dtstart: 2023-03-15 19:00:00+01:00
         dtend: 2023-03-15 23:59:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Pyvo Prague #138 - Do your unit tests cover all edge cases?'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, November 16 at 7:00 PM
+
+
+          Pyvo bude i v listopadu! Můžete se těšit na přednášku "Do your unit tests cover all edge cases?", a určitě dojde i na lightning talky. Potkáme se v ka...
+
+
+          https://www.meetup.com/pyvo-prague-python-meetup/events/289217222/'
+        location: Café Lajka (U Akademie 366/11, Praha 7-Bubeneč, Czech Republic 170 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssydcpbvb@meetup.com
+        url: https://www.meetup.com/pyvo-prague-python-meetup/events/289217222/
+        dtstart: 2022-11-16 19:00:00+01:00
+        dtend: 2022-11-16 23:59:00+01:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
