--- a/data/sources/pehapkari-cz.yaml
+++ b/data/sources/pehapkari-cz.yaml
@@ -24726,3 +24726,54 @@ series:
         url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/288005611/
         dtstart: 2022-09-15 18:00:00+02:00
         dtend: 2022-09-15 23:55:00+02:00
+  - meetupcom:
+      meta_description: 'Zveme vás na první setkání přátel PHP po Novém roce, tentokrát v kancelářích Košík.cz.
+
+
+        Těšit se můžete na zajímavé přednášky, chutné občerstvení po celou dobu akce, a sout'
+      og_title: 54. sraz přátel PHP v Košík.cz v Praze, Thu, Jan 19, 2023, 6:00 PM   | Meetup
+      url: https://www.meetup.com/pražske-srazy-přatel-php-pehapkari-cz/events/290273157/
+      ical:
+        summary: 54. sraz přátel PHP v Košík.cz v Praze
+        description: 'Pražské srazy přátel PHP - Pehapkari.cz
+
+          Thursday, January 19 at 6:00 PM
+
+
+          Zveme vás na první setkání přátel PHP po Novém roce, tentokrát v kancelářích Košík.cz. Těšit se můžete na zajímavé přednášky, chutné občerstvení po ce...
+
+
+          https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/290273157/'
+        location: Kosik.cz s.r.o. (Evropská 11/2758, Praha 6, Czech Republic 160 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290273157@meetup.com
+        url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/290273157/
+        dtstart: 2023-01-19 18:00:00+01:00
+        dtend: 2023-01-19 23:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 53. sraz přátel PHP v Ecomailu v Praze
+        description: 'Pražské srazy přátel PHP - Pehapkari.cz
+
+          Thursday, December 1 at 6:00 PM
+
+
+          Zveme vás na poslední letošní setkání přátel PHP, tentokrát v kancelářích Ecomailu v centru Prahy. Náš partner si pro nás připravil zajímavé přednášky...
+
+
+          https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/289395420/'
+        location: Ecomail.cz s.r.o. (Na Zderaze 15, Nové Město, Praha-Praha 2, Czech Republic 120 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289395420@meetup.com
+        url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/289395420/
+        dtstart: 2022-12-01 18:00:00+01:00
+        dtend: 2022-12-01 23:00:00+01:00
